--- a/faq.html
+++ b/faq.html
@@ -39,7 +39,7 @@
         <div class="main-navigation">
             <nav class="navbar navbar-expand-lg">
                 <div class="container">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="/">
                         <img src="/assets/img/logo/logo.png" alt="logo">
                     </a>
                     <div class="mobile-menu-right">
@@ -54,38 +54,38 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle active" href="#" data-bs-toggle="dropdown">Home</a>
                                 <ul class="dropdown-menu fade-up">
-                                    <li><a class="dropdown-item" href="index.html">Home Page 01</a></li>
-                                    <li><a class="dropdown-item" href="index-2.html">Home Page 02</a></li>
-                                    <li><a class="dropdown-item" href="index-3.html">Home Page 03</a></li>
+                                    <li><a class="dropdown-item" href="/">Home Page 01</a></li>
+                                    <li><a class="dropdown-item" href="/index-2">Home Page 02</a></li>
+                                    <li><a class="dropdown-item" href="/index-3">Home Page 03</a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="facility.html">Facility</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/facility">Facility</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Pages</a>
                                 <ul class="dropdown-menu fade-up">
-                                    <li><a class="dropdown-item" href="about.html">About Us</a></li>
-                                    <li><a class="dropdown-item" href="team.html">Team</a></li>
-                                    <li><a class="dropdown-item" href="pricing.html">Pricing Plan</a></li>
-                                    <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
-                                    <li><a class="dropdown-item" href="faq.html">Faq</a></li>
-                                    <li><a class="dropdown-item" href="login.html">Login</a></li>
-                                    <li><a class="dropdown-item" href="register.html">Register</a></li>
-                                    <li><a class="dropdown-item" href="forgot-password.html">Forgot Password</a></li>
-                                    <li><a class="dropdown-item" href="404.html">404 Error</a></li>
-                                    <li><a class="dropdown-item" href="coming-soon.html">Coming Soon</a></li>
-                                    <li><a class="dropdown-item" href="terms.html">Terms Of Service</a></li>
-                                    <li><a class="dropdown-item" href="privacy.html">Privacy Policy</a></li>
+                                    <li><a class="dropdown-item" href="/about">About Us</a></li>
+                                    <li><a class="dropdown-item" href="/team">Team</a></li>
+                                    <li><a class="dropdown-item" href="/pricing">Pricing Plan</a></li>
+                                    <li><a class="dropdown-item" href="/gallery">Gallery</a></li>
+                                    <li><a class="dropdown-item" href="/faq">Faq</a></li>
+                                    <li><a class="dropdown-item" href="/login">Login</a></li>
+                                    <li><a class="dropdown-item" href="/register">Register</a></li>
+                                    <li><a class="dropdown-item" href="/forgot-password">Forgot Password</a></li>
+                                    <li><a class="dropdown-item" href="/404">404 Error</a></li>
+                                    <li><a class="dropdown-item" href="/coming-soon">Coming Soon</a></li>
+                                    <li><a class="dropdown-item" href="/terms">Terms Of Service</a></li>
+                                    <li><a class="dropdown-item" href="/privacy">Privacy Policy</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Blog</a>
                                 <ul class="dropdown-menu fade-up">
-                                    <li><a class="dropdown-item" href="blog.html">Blog</a></li>
-                                    <li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li>
+                                    <li><a class="dropdown-item" href="/blog">Blog</a></li>
+                                    <li><a class="dropdown-item" href="/blog-single">Blog Single</a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                         </ul>
                         <div class="header-nav-right">
                             <div class="header-nav-search">
@@ -125,7 +125,7 @@
             <div class="container">
                 <h2 class="breadcrumb-title">Faq</h2>
                 <ul class="breadcrumb-menu">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li class="active">Faq</li>
                 </ul>
             </div>
@@ -226,7 +226,7 @@
                 <div class="row footer-widget-wrapper pt-100 pb-70">
                     <div class="col-md-6 col-lg-4">
                         <div class="footer-widget-box about-us">
-                            <a href="#" class="footer-logo">
+                            <a href="/" class="footer-logo">
                                 <img src="/assets/img/logo/logo.png" alt="">
                             </a>
                             <p class="mb-20">
