--- a/recipes.html
+++ b/recipes.html
@@ -35,7 +35,7 @@
       <div class="main-navigation">
         <nav class="navbar navbar-expand-lg">
           <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/">
               <img src="/assets/img/logo/logo.png" alt="logo" />
             </a>
             <div class="mobile-menu-right">
@@ -66,24 +66,24 @@
                   >
                   <ul class="dropdown-menu fade-up">
                     <li>
-                      <a class="dropdown-item" href="index.html"
+                      <a class="dropdown-item" href="/"
                         >Home Page 01</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="index-2.html"
+                      <a class="dropdown-item" href="/index-2"
                         >Home Page 02</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="index-3.html"
+                      <a class="dropdown-item" href="/index-3"
                         >Home Page 03</a
                       >
                     </li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">O nama</a>
+                  <a class="nav-link" href="/about">O nama</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -95,47 +95,47 @@
                   </a>
                   <ul class="dropdown-menu fade-up">
                     <li>
-                      <a class="dropdown-item" href="facility.html">Facility</a>
+                      <a class="dropdown-item" href="/facility">Facility</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="about.html">About Us</a>
+                      <a class="dropdown-item" href="/about">About Us</a>
                     </li>
-                    <li><a class="dropdown-item" href="team.html">Team</a></li>
+                    <li><a class="dropdown-item" href="/team">Team</a></li>
                     <li>
-                      <a class="dropdown-item" href="pricing.html"
+                      <a class="dropdown-item" href="/pricing"
                         >Pricing Plan</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="gallery.html">Gallery</a>
+                      <a class="dropdown-item" href="/gallery">Gallery</a>
                     </li>
-                    <li><a class="dropdown-item" href="faq.html">Faq</a></li>
+                    <li><a class="dropdown-item" href="/faq">Faq</a></li>
                     <li>
-                      <a class="dropdown-item" href="login.html">Login</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="register.html">Register</a>
+                      <a class="dropdown-item" href="/login">Login</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="forgot-password.html"
+                      <a class="dropdown-item" href="/register">Register</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="/forgot-password"
                         >Forgot Password</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="404.html">404 Error</a>
+                      <a class="dropdown-item" href="/404">404 Error</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="coming-soon.html"
+                      <a class="dropdown-item" href="/coming-soon"
                         >Coming Soon</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="terms.html"
+                      <a class="dropdown-item" href="/terms"
                         >Terms Of Service</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="privacy.html"
+                      <a class="dropdown-item" href="/privacy"
                         >Privacy Policy</a
                       >
                     </li>
@@ -149,9 +149,9 @@
                     >Novosti</a
                   >
                   <ul class="dropdown-menu fade-up">
-                    <li><a class="dropdown-item" href="blog.html">Blog</a></li>
+                    <li><a class="dropdown-item" href="/blog">Blog</a></li>
                     <li>
-                      <a class="dropdown-item" href="blog-single.html"
+                      <a class="dropdown-item" href="/blog-single"
                         >Blog Single</a
                       >
                     </li>
@@ -167,7 +167,7 @@
                   >
                   <ul class="dropdown-menu fade-up">
                     <li>
-                      <a class="dropdown-item" href="recipes.html">Recepti</a>
+                      <a class="dropdown-item" href="/recipes">Recepti</a>
                     </li>
                     <li>
                       <a class="dropdown-item" href="news.html">Novosti</a>
@@ -186,7 +186,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Kontakt</a>
+                  <a class="nav-link" href="/contact">Kontakt</a>
                 </li>
               </ul>
               <div class="header-nav-right">
@@ -234,7 +234,7 @@
         <div class="container">
           <h2 class="breadcrumb-title">Naši recepti</h2>
           <ul class="breadcrumb-menu">
-            <li><a href="index.html">Početna</a></li>
+            <li><a href="/">Početna</a></li>
             <li class="active">Recepti</li>
           </ul>
         </div>
@@ -292,7 +292,7 @@
           <div class="row footer-widget-wrapper pt-100 pb-70">
             <div class="col-md-6 col-lg-4">
               <div class="footer-widget-box about-us">
-                <a href="#" class="footer-logo">
+                <a href="/" class="footer-logo">
                   <img src="/assets/img/logo/logo.png" alt="" />
                 </a>
                 <p class="mb-20">
